[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes_and_scripts/Enemies/Enemy_shooter_chaser.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Enemys/Enemy-with-sniper.png" type="Texture" id=2]
[ext_resource path="res://Scenes_and_scripts/Enemies/Sniper_enemy.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="CircleShape2D" id=2]
radius = 21.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 700, 400 )

[sub_resource type="Animation" id=4]
resource_name = "Shoot"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 0 ]
}

[node name="Sniper_enemy" instance=ExtResource( 1 )]
script = ExtResource( 3 )
points = 5

[node name="Sprite" parent="." index="0"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
vframes = 4

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, 12 )
shape = SubResource( 1 )

[node name="Hurtbox" parent="." index="2"]
position = Vector2( 0, 12 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="HealthBar" parent="." index="3"]
margin_left = -42.0
margin_top = -56.0
margin_right = 42.0
margin_bottom = -42.0
rect_pivot_offset = Vector2( 42, 68 )

[node name="Range" parent="." index="4"]
position = Vector2( 0, 12 )

[node name="CollisionShape2D" parent="Range" index="0"]
shape = SubResource( 3 )

[node name="Timer_shoot" parent="." index="6"]
wait_time = 2.0

[node name="Weapon_pos" parent="." index="7"]
position = Vector2( 0, -32 )

[node name="ShootAnimation" type="AnimationPlayer" parent="." index="9"]
playback_speed = 5.0
anims/Shoot = SubResource( 4 )
